Refactor wc_xgboost.ipynb to improve GPU support and code clarity. Introduce a helper function for converting GPU arrays to NumPy, enhance installation instructions for CuPy, and ensure consistent data types in simulations. Update early stopping parameters and streamline match simulation logic for better performance.

--- a/wc_xgboost.ipynb
+++ b/wc_xgboost.ipynb
@@ -36,9 +36,24 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install 'pandas>=1.5.0' 'numpy>=1.21.0' 'scipy>=1.9.0' 'xgboost>=2.0.0' \\\n",
-        "    'scikit-learn>=1.0.0' 'matplotlib>=3.5.0' 'seaborn>=0.12.0' 'joblib>=1.2.0' \\\n",
-        "    'cupy-cuda12x'  # For Colab with CUDA 12 (GPU-accelerated simulation)"
+        "# Install core dependencies\n",
+        "!pip install -q 'pandas>=1.5.0' 'numpy>=1.21.0' 'scipy>=1.9.0' 'xgboost>=2.0.0' \\\n",
+        "    'scikit-learn>=1.0.0' 'matplotlib>=3.5.0' 'seaborn>=0.12.0' 'joblib>=1.2.0'\n",
+        "\n",
+        "# Install CuPy for GPU-accelerated simulation (try CUDA 12 first, then CUDA 11)\n",
+        "try:\n",
+        "    import cupy\n",
+        "    print(\"CuPy already installed\")\n",
+        "except ImportError:\n",
+        "    print(\"Installing CuPy for GPU acceleration...\")\n",
+        "    import subprocess\n",
+        "    # Try CUDA 12 first (default for newer Colab)\n",
+        "    result = subprocess.run(['pip', 'install', '-q', 'cupy-cuda12x'], capture_output=True)\n",
+        "    if result.returncode != 0:\n",
+        "        # Fallback to CUDA 11\n",
+        "        print(\"CUDA 12 failed, trying CUDA 11...\")\n",
+        "        subprocess.run(['pip', 'install', '-q', 'cupy-cuda11x'], capture_output=True)\n",
+        "    print(\"CuPy installation complete\")"
       ]
     },
     {
@@ -124,6 +139,9 @@
         "\n",
         "USE_GPU = check_gpu_available()\n",
         "\n",
+        "# Initialize cp as None for CPU fallback (prevents NameError if GPU unavailable)\n",
+        "cp = None\n",
+        "\n",
         "if USE_GPU:\n",
         "    try:\n",
         "        import cupy as cp\n",
@@ -140,6 +158,7 @@
         "        print(f\"CuPy import failed: {e}\")\n",
         "        print(\"Falling back to NumPy (CPU).\")\n",
         "        USE_GPU = False\n",
+        "        cp = None\n",
         "        xp = np\n",
         "else:\n",
         "    print(\"No GPU detected. Falling back to NumPy (CPU).\")\n",
@@ -147,7 +166,14 @@
         "\n",
         "# XGBoost device setting\n",
         "xgb_device = \"cuda\" if USE_GPU else \"cpu\"\n",
-        "print(f\"XGBoost device: {xgb_device}\")\n"
+        "print(f\"XGBoost device: {xgb_device}\")\n",
+        "\n",
+        "# Helper function to convert GPU arrays to CPU (NumPy)\n",
+        "def to_numpy(arr):\n",
+        "    \"\"\"Convert CuPy array to NumPy, or return NumPy array unchanged.\"\"\"\n",
+        "    if USE_GPU and cp is not None and hasattr(arr, 'get'):\n",
+        "        return cp.asnumpy(arr)\n",
+        "    return arr if isinstance(arr, np.ndarray) else np.asarray(arr)\n"
       ]
     },
     {
@@ -829,6 +855,7 @@
         "    'colsample_bytree': 0.7,\n",
         "    'random_state': 42,\n",
         "    'device': xgb_device,           # GPU acceleration (cuda or cpu)\n",
+        "    'early_stopping_rounds': 50,    # Stop if no improvement for 50 rounds\n",
         "}\n",
         "\n",
         "print(f\"Training with device: {xgb_device}\")\n",
@@ -839,7 +866,6 @@
         "model_home.fit(\n",
         "    X_train, y_home_train,\n",
         "    eval_set=[(X_test, y_home_test)],\n",
-        "    early_stopping_rounds=50,\n",
         "    verbose=100  # Print progress every 100 trees\n",
         ")\n",
         "print(f\"Home Goals Model: stopped at {model_home.best_iteration} trees\")\n",
@@ -849,7 +875,6 @@
         "model_away.fit(\n",
         "    X_train, y_away_train,\n",
         "    eval_set=[(X_test, y_away_test)],\n",
-        "    early_stopping_rounds=50,\n",
         "    verbose=100\n",
         ")\n",
         "print(f\"Away Goals Model: stopped at {model_away.best_iteration} trees\")"
@@ -1290,12 +1315,8 @@
         "    away_goals = xp.random.poisson(away_lambda, size=n_sims)\n",
         "    \n",
         "    # Convert back to numpy for calculations if using GPU\n",
-        "    if USE_GPU:\n",
-        "        home_goals_np = cp.asnumpy(home_goals)\n",
-        "        away_goals_np = cp.asnumpy(away_goals)\n",
-        "    else:\n",
-        "        home_goals_np = home_goals\n",
-        "        away_goals_np = away_goals\n",
+        "    home_goals_np = to_numpy(home_goals)\n",
+        "    away_goals_np = to_numpy(away_goals)\n",
         "    \n",
         "    # Calculate probabilities\n",
         "    home_wins = (home_goals_np > away_goals_np).mean()\n",
@@ -1427,9 +1448,7 @@
         "    away_wins = (home_goals < away_goals).mean(axis=1)\n",
         "    \n",
         "    # Return as numpy for compatibility with rest of code\n",
-        "    if USE_GPU:\n",
-        "        return cp.asnumpy(home_wins), cp.asnumpy(draws), cp.asnumpy(away_wins)\n",
-        "    return home_wins, draws, away_wins\n",
+        "    return to_numpy(home_wins), to_numpy(draws), to_numpy(away_wins)\n",
         "\n",
         "print(\"Vectorized match simulation function ready\")\n"
       ]
@@ -1888,10 +1907,10 @@
         "        n_teams = len(teams)\n",
         "        teams_by_group[group_name] = teams\n",
         "        \n",
-        "        # Points matrix: (n_sims, n_teams)\n",
-        "        points = xp.zeros((n_sims, n_teams), dtype=xp.int32)\n",
-        "        goal_diff = xp.zeros((n_sims, n_teams), dtype=xp.float32)\n",
-        "        goals_for = xp.zeros((n_sims, n_teams), dtype=xp.float32)\n",
+        "        # Points matrix: (n_sims, n_teams) - use int64 for compatibility\n",
+        "        points = xp.zeros((n_sims, n_teams), dtype=xp.int64)\n",
+        "        goal_diff = xp.zeros((n_sims, n_teams), dtype=xp.float64)\n",
+        "        goals_for = xp.zeros((n_sims, n_teams), dtype=xp.float64)\n",
         "        \n",
         "        # Simulate all matches in this group across all tournaments\n",
         "        for i in range(n_teams):\n",
@@ -1911,24 +1930,25 @@
         "                    a_lambda = 1.5\n",
         "                \n",
         "                # Vectorized Poisson: (n_sims,) goals for each team\n",
-        "                home_goals = xp.random.poisson(max(0.1, h_lambda), size=n_sims)\n",
-        "                away_goals = xp.random.poisson(max(0.1, a_lambda), size=n_sims)\n",
+        "                home_goals = xp.random.poisson(max(0.1, h_lambda), size=n_sims).astype(xp.float64)\n",
+        "                away_goals = xp.random.poisson(max(0.1, a_lambda), size=n_sims).astype(xp.float64)\n",
         "                \n",
         "                # Update points based on results (vectorized)\n",
-        "                home_wins = home_goals > away_goals\n",
-        "                draws = home_goals == away_goals\n",
-        "                away_wins = home_goals < away_goals\n",
+        "                # Cast booleans to int64 explicitly to avoid type issues\n",
+        "                home_wins = (home_goals > away_goals).astype(xp.int64)\n",
+        "                draws = (home_goals == away_goals).astype(xp.int64)\n",
+        "                away_wins = (home_goals < away_goals).astype(xp.int64)\n",
         "                \n",
-        "                points[:, i] += 3 * home_wins + 1 * draws\n",
-        "                points[:, j] += 3 * away_wins + 1 * draws\n",
+        "                points[:, i] += 3 * home_wins + draws\n",
+        "                points[:, j] += 3 * away_wins + draws\n",
         "                goal_diff[:, i] += home_goals - away_goals\n",
         "                goal_diff[:, j] += away_goals - home_goals\n",
         "                goals_for[:, i] += home_goals\n",
         "                goals_for[:, j] += away_goals\n",
         "        \n",
         "        # Sort teams by points, then goal difference, then goals for (for each simulation)\n",
-        "        # Use a combined sort key\n",
-        "        sort_key = points.astype(xp.float32) * 10000 + goal_diff * 10 + goals_for * 0.01\n",
+        "        # Use a combined sort key (use float64 for precision)\n",
+        "        sort_key = points.astype(xp.float64) * 10000 + goal_diff * 10 + goals_for * 0.01\n",
         "        rankings = xp.argsort(-sort_key, axis=1)  # Descending order\n",
         "        \n",
         "        group_standings[group_name] = rankings\n",
@@ -2055,11 +2075,8 @@
         "    finalists = Counter()\n",
         "    semifinalists = Counter()\n",
         "    \n",
-        "    # Convert to numpy for easier indexing if using GPU\n",
-        "    if USE_GPU:\n",
-        "        group_standings_np = {k: cp.asnumpy(v) for k, v in group_standings.items()}\n",
-        "    else:\n",
-        "        group_standings_np = group_standings\n",
+        "    # Convert to numpy for easier indexing\n",
+        "    group_standings_np = {k: to_numpy(v) for k, v in group_standings.items()}\n",
         "    \n",
         "    for sim_idx in range(n_tournament_sims):\n",
         "        # Get group results for this simulation\n",
