fixing frontend and notebook traning

--- a/wc_xgboost.ipynb
+++ b/wc_xgboost.ipynb
@@ -2322,21 +2322,25 @@
         "    - 1F vs 2E\n",
         "    - 1H vs 2G\n",
         "    \"\"\"\n",
-        "    # Extract group winners and runners-up\n",
-        "    # group_results format: {'A': [(team, stats), (team, stats), ...], ...}\n",
+        "    # Normalize keys: handle both 'A' and 'Group A' formats\n",
+        "    def get_group(letter):\n",
+        "        if f'Group {letter}' in group_results:\n",
+        "            return group_results[f'Group {letter}']\n",
+        "        return group_results[letter]\n",
+        "    \n",
         "    pairs = []\n",
         "    \n",
         "    # Left bracket\n",
-        "    pairs.append((group_results['A'][0][0], group_results['B'][1][0]))  # 1A vs 2B\n",
-        "    pairs.append((group_results['C'][0][0], group_results['D'][1][0]))  # 1C vs 2D\n",
-        "    pairs.append((group_results['E'][0][0], group_results['F'][1][0]))  # 1E vs 2F\n",
-        "    pairs.append((group_results['G'][0][0], group_results['H'][1][0]))  # 1G vs 2H\n",
+        "    pairs.append((get_group('A')[0][0], get_group('B')[1][0]))  # 1A vs 2B\n",
+        "    pairs.append((get_group('C')[0][0], get_group('D')[1][0]))  # 1C vs 2D\n",
+        "    pairs.append((get_group('E')[0][0], get_group('F')[1][0]))  # 1E vs 2F\n",
+        "    pairs.append((get_group('G')[0][0], get_group('H')[1][0]))  # 1G vs 2H\n",
         "    \n",
         "    # Right bracket\n",
-        "    pairs.append((group_results['B'][0][0], group_results['A'][1][0]))  # 1B vs 2A\n",
-        "    pairs.append((group_results['D'][0][0], group_results['C'][1][0]))  # 1D vs 2C\n",
-        "    pairs.append((group_results['F'][0][0], group_results['E'][1][0]))  # 1F vs 2E\n",
-        "    pairs.append((group_results['H'][0][0], group_results['G'][1][0]))  # 1H vs 2G\n",
+        "    pairs.append((get_group('B')[0][0], get_group('A')[1][0]))  # 1B vs 2A\n",
+        "    pairs.append((get_group('D')[0][0], get_group('C')[1][0]))  # 1D vs 2C\n",
+        "    pairs.append((get_group('F')[0][0], get_group('E')[1][0]))  # 1F vs 2E\n",
+        "    pairs.append((get_group('H')[0][0], get_group('G')[1][0]))  # 1H vs 2G\n",
         "    \n",
         "    return pairs\n",
         "\n",
@@ -2352,9 +2356,13 @@
         "    - Runners-up and 3rd place teams fill remaining slots\n",
         "    - Avoid same-group matchups in Round of 32 when possible\n",
         "    \"\"\"\n",
-        "    # Extract group winners and runners-up\n",
-        "    winners = {group: standings[0][0] for group, standings in group_results.items()}\n",
-        "    runners_up = {group: standings[1][0] for group, standings in group_results.items()}\n",
+        "    # Normalize group keys: convert 'Group A' to 'A' for consistent access\n",
+        "    def normalize_key(key):\n",
+        "        return key.replace('Group ', '') if key.startswith('Group ') else key\n",
+        "    \n",
+        "    # Extract group winners and runners-up with normalized keys\n",
+        "    winners = {normalize_key(group): standings[0][0] for group, standings in group_results.items()}\n",
+        "    runners_up = {normalize_key(group): standings[1][0] for group, standings in group_results.items()}\n",
         "    \n",
         "    # Get best 8 third-place teams (already sorted)\n",
         "    third_place_teams = [t[0] for t in best_third_place[:8]]\n",
