Refactor unused_runners logic in wc_xgboost.ipynb to utilize normalize_key for consistent team name access, improving clarity and preventing potential key errors.

--- a/wc_xgboost.ipynb
+++ b/wc_xgboost.ipynb
@@ -2414,8 +2414,9 @@
         "                       runners_up['I'], runners_up['J'], runners_up['K'], runners_up['L']])\n",
         "    \n",
         "    # Match 13-16: Remaining Runners-up and 3rd Place teams\n",
-        "    unused_runners = [runners_up[g] for g in sorted(group_results.keys()) \n",
-        "                     if runners_up[g] not in used_teams]\n",
+        "    # Use normalize_key to convert 'Group A' -> 'A' when accessing runners_up\n",
+        "    unused_runners = [runners_up[normalize_key(g)] for g in sorted(group_results.keys()) \n",
+        "                     if runners_up[normalize_key(g)] not in used_teams]\n",
         "    unused_third = [t for t in third_place_teams if t not in used_teams]\n",
         "    \n",
         "    # Pair remaining teams\n",
